<!DOCTYPE resources [<!ENTITY appname "IPST2"><!ENTITY viewlist "View List"><!ENTITY separator "&#160;-&#160;"><!ENTITY all "All"><!ENTITY month "Month"><!ENTITY today "Today"><!ENTITY week "Week">]>

<resources>
    <string name="app_name">&appname;</string>

    <string name="allmail">All Mail</string>
    <string name="allmailmissing">&#160;Either it\'s been deleted, or your GMail is not in English.</string>
    <string name="accountnotfoundtitle">Account Not Found</string>
    <string name="accountnotfoundmessage">The account you selected wasn\'t found on this device.</string>
    <string name="all" translatable="false">&all;</string>
    <string name="cantfindfolder">&appname; can\'t find the \'%1$s\' folder.</string>
    <string name="chooseImport">Choose an import File</string>
    <string name="custommissing">&#160;Either it\'s been deleted, or is missing for some other reason. Would you like to set a new folder to parse, or reset to \'All Mail\'?</string>
    <string name="error">Error:&#160;</string>
    <string name="foldermissing">&#160;Folder Missing</string>
    <string name="gmaillogin">GMail Login</string>
    <string name="importingCSV">Importing from CSV</string>
    <string name="loading">Loading…</string>
    <string name="month" translatable="false">&month;</string>
    <string name="noaccountsmessage">You have no Google accounts on your device</string>
    <string name="noaccountstitle">No Accounts</string>
    <string name="ok">OK</string>
    <string name="setcustomfolder">Set Custom Folder</string>
    <string name="title_settingsactivity">Settings</string>
    <string name="today" translatable="false">&today;</string>
    <string name="viewlistall" translatable="false">&viewlist;&separator;&all;</string>
    <string name="viewlistmonth" translatable="false">&viewlist;&separator;&month;</string>
    <string name="viewlisttoday" translatable="false">&viewlist;&separator;&today;</string>
    <string name="viewlistweek" translatable="false">&viewlist;&separator;&week;</string>
    <string name="week" translatable="false">&week;</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pendingbuttondescrip">Pending</string>
    <string name="acceptedbuttondescrip">Accepted</string>
    <string name="rejectedbuttondescrip">Rejected</string>
    <string name="notavailable">N/A</string>
    <string name="noportalwarning">"No Portal Submissions"</string>
    <string name="noportalmessage">No Portal Submissions were found in the local database.  Try refreshing.</string>
    <string name="pslisttitle_activity">Submissions</string>
    <string name="psdetailstitle_activity">Details</string>
    <string name="saveportalimage_psdetailsactivity">Save Portal Image</string>
    <string name="submittedna_psdetailsactivity">Submitted: </string>
    <string name="namena_psdetailsactivity">Name: </string>
    <string name="datesub_psdetailsactivity">Date Submitted: </string>
    <string name="dateacc_psdetailsactivity">Date Accepted: </string>
    <string name="daterej_psdetailsactivity">Date Rejected: </string>
    <string name="detailsimagedesc_psdetailsactivity">Portal Submission Image</string>
    <string name="daysinqueue_psdetailsactivity">Days in Queue:</string>
    <string name="closebutton_imagedetails">Close</string>
    <string name="dateresponded_psdetailsactivity">Date Responded:</string>
    <string name="rejectionreason_psdetailsactivity">Rejection Reason:</string>
    <string name="liveaddress_psdetailsactivity">Live Address:</string>
    <string name="viewonintel_psdetailsactivity">View On Intel Map</string>
    <string name="invalidtokentitle_getmailtask">Invalid Token</string>
    <string name="invalidtokenmessage_getmailtask">Your auth token was invalid. Try again.</string>

    <string name="errormessage_viewintellink">The Intel URL for this Portal Submission is invalid. Something wasn\'t parsed right.</string>
    <string name="errortitle_viewintellink">Invalid Intel URL</string>
    <string name="action_search">Search</string>
    <string name="action_sortlist">Sort List</string>
    <string name="refresh_menumainactivity">Refresh</string>
    <string name="listsorttypes_preftitle">Sort Type</string>
    <string name="listsorttypes_prefmessage">This sets the way the lists are sorted.</string>
    <string name="datetype_preftitle">Date Format</string>
    <string name="datetype_prefmessage">This sets the date format displayed throughout the
        app.</string>

    <string name="defaultcategory_preftitle">Default Main Category</string>
    <string name="defaultcategory_prefmessage">This sets which tab is opened by default in the
        app\'s main page.</string>

    <!-- Strings related to Settings -->
    <string name="dbsettings_prefheader">Database Settings</string>
    <string name="listsettings_prefheader">List Settings</string>
    <string name="miscsettings_prefheader">Misc. Settings</string>
    <string name="aboutcontact_prefheader">About &amp; Contact</string>

    <string name="cleardb_prefsummary">Clear all local data and make the app as if you just installed it.</string>
    <string name="cleardb_preftitle">Hard Reset</string>
    <string name="export_csv">Export to CSV</string>
    <string name="export_json">Export to JSON</string>
    <string name="exportdb_prefsummary">Export local database of portal submissions to a CSV file.</string>
    <string name="exportdb_preftitle">Export</string>
    <string name="exportlogs_summary">Export logs to a text file</string>
    <string name="exportlogs_title">Export Logs</string>
    <string name="importdb_prefsummary">Import portal submissions from a CSV you exported from IPST2.  *WARNING* Importing from an IPST(original) CSV is not supported.</string>
    <string name="importdb_preftitle">Import</string>
    <string name="exportSummary">Export portal data</string>
    <string name="exportTitle">Export v2</string>


    <string name="manualrefresh_preftitle">Manual Refresh</string>
    <string name="manualrefresh_prefmessage">If checked, IPST will only refresh when the
        refresh button is clicked.</string>

    <string name="contactdev_preftitle">Contact Developer</string>
    <string name="contactdev_prefmessage">Open an email window to contact the developer of
        IPST2 with issues.</string>

    <string name="uploadportals_preftitle">Upload to IPST Stats</string>
    <string name="uploadportals_prefmessage">Upload your portal submission data to IPST
        Stats.  It will be anonymized.</string>

    <string name="versionnum_preftitle">Current Version</string>
    <string name="versionnum_prefmessage" translatable="false">0.0.0</string>

    <string name="darktheme_preftitle">Dark Theme</string>
    <string name="darktheme_prefmessage">If checked, IPST use a dark theme next time a view is
        opened
        .</string>

    <string name="confirmcleardbpref_message">Confirm clear *ALL* local data? You will have to re-login and re-parse all data.</string>
    <string name="confirmcleardb_preftitle">Confirm Clear Data?</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="folderdefault_pref" translatable="false">[Gmail]/All Mail</string>
    <string name="folderdefault_preftitle">Default Folder</string>
    <string name="folderdefault_prefmessage">*IF IPST2 FINDS EMAILS DON\'T CHANGE THIS* This
    preference allows you to manually set where IPST2 looks for emails.</string>
    <string name="viewipststats_prefmessage">IPST Stats is a place to view charts and maps of global submissions.</string>
    <string name="viewipststats_preftitle">Go to IPST Stats</string>
    <string name="gototg_prefmessage">Open telegram and join the IPST Announcements Channel.</string>
    <string name="gototg_preftitle">Announcements Channel</string>
    <string name="resetkey_prefs" translatable="false">reset-23</string>
    <string name="theme_key" translatable="false">dark-theme</string>
    <string name="searching_email">Searching Email</string>
    <string name="status_icon">Status Icon</string>
    <string name="seer_key" translatable="false">seerKey</string>
    <string name="seer_prefmessage">Only show portals in IPST for portals submitted before the seer badge stopped tracking.</string>
    <string name="seer_preftitle">Seer Stats Only</string>
    <string name="export_portal_data">Export All Portal Data</string>
    <string name="export_accepted_portal_data">Export Accepted Portal Data</string>
    <string name="edit">Edit</string>
    <string name="psexportactivity_title">IPST - Export Portals</string>
    <string name="pseditactivity_title">Edit Submission</string>
    <string name="psimportactivity_title">IPST - Import CSV</string>
    <string name="getting_results">Getting Results...</string>
    <string name="set_sort_criteria">Set Sort Criteria</string>
    <string name="parsing_email">Parsing email</string>
    <string name="set_custom_folder">Set Custom Folder To Parse</string>
    <string name="toast_seer_only">Showing ONLY Seer Portals...</string>
    <string name="error_creating_media">Error creating media file, check storage permissions:</string>
    <string name="image_save_failed">Image Save Failed</string>
    <string name="image_saved">Image Saved -</string>
    <string name="recently_sent_data_error">Recently Sent Portal Data, Please wait and try again.</string>
    <string name="building_portal_data">Building portal data...</string>
    <string name="name">Name</string>
    <string name="import_from_csv">Import From CSV</string>
    <string name="save_portal">SAVE PORTAL</string>
    <string name="save_portal_dialog_message">Are you *SURE* you want to save this portal submission?</string>
    <string name="save_portal_dialog_title">Save Portal Submission?</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this portal from IPST?</string>
    <string name="delete_dialog_title">**DELETE** Portal?</string>
    <string name="emph_delete">*DELETE*</string>
    <string name="save">Save</string>
    <string name="portal_type">Portal Type:</string>
    <string name="intel_link">Intel Link:</string>
    <string name="purchases_changed">Play Store: purchases have changed!</string>
    <string name="donation_icon">Donation Icon</string>
    <string name="gotodonate_prefmessage">If you want to donate to the future development of IPST, you can here.</string>
    <string name="gotodonate_preftitle">Donate to Developers</string>
    <string name="donate">Donate</string>
    <string name="loadingproducts">Loading Products…</string>
    <string name="selectdonationtype">Select Donation Type</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="one_time_payment">One Time Payment</string>


    <string name="subscribe">Subcribe</string>
    <string name="subscriptions">Active Subscriptions</string>
    <string name="to_cancel_subscriptions_you_must_do_so_through_the_google_play_website_app">To cancel subscriptions, you must do so through the google play website/app.</string>
</resources>
