<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2017 Steven Foskett, Jimmy Ho, Ryan Porterfield                 ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a   ~
  ~ copy of this software and associated documentation files (the "Software"),~
  ~ to deal in the Software without restriction, including without limitation ~
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense,  ~
  ~ and/or sell copies of the Software, and to permit persons to whom the     ~
  ~ Software is furnished to do so, subject to the following conditions:      ~
  ~                                                                           ~
  ~ The above copyright notice and this permission notice shall be included in~
  ~ all copies or substantial portions of the Software.                       ~
  ~                                                                           ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR~
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,  ~
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER    ~
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING   ~
  ~ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER       ~
  ~ DEALINGS IN THE SOFTWARE.                                                 ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.einzig.ipst2.activities.SettingsActivity$DBPreferenceFragment"
        android:icon="@drawable/ic_database"
        android:title="@string/dbsettings_prefheader" />

    <header
        android:fragment="com.einzig.ipst2.activities.SettingsActivity$ListSettingsFragment"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/listsettings_prefheader" />

    <header
        android:fragment="com.einzig.ipst2.activities.SettingsActivity$MiscSettingsFragment"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/miscsettings_prefheader" />

    <header
        android:fragment="com.einzig.ipst2.activities.SettingsActivity$AboutSettingsFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/aboutcontact_prefheader" />

</preference-headers>
