<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.einzig.ipst2.activities.MainActivity">

    <Button
        android:id="@+id/gmail_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/gmailloginbutton"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/mainui_mainactivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <RadioGroup
            android:id="@+id/tabs_mainactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dip">

            <RadioButton
                android:id="@+id/todaytab_mainactivity"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape_radio"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:padding="10dip"
                android:text="@string/today"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/weektab_mainactivity"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="10dip"
                android:text="@string/week"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/monthtab_mainactivity"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="10dip"
                android:text="@string/month"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/alltab_mainactivity"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="10dip"
                android:text="@string/all"
                android:textColor="@color/colorPrimary" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/pendinggraph_mainactivity"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_margin="10dip"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/pendingtext_mainactivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/notavailable"
                    android:textAppearance="?android:textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/pendingbutton_mainactivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/pendingbuttondescrip"
                    android:src="@drawable/icon_pending"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/acceptedgraph_mainactivity"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_margin="10dip"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/acceptedtext_mainactivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/notavailable"
                    android:textAppearance="?android:textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/acceptedbutton_mainactivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/acceptedbuttondescrip"
                    android:src="@drawable/icon_accepted"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/rejectedgraph_mainactivity"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_margin="10dip"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/rejectedtext_mainactivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/notavailable"
                    android:textAppearance="?android:textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/rejectedbutton_mainactivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/rejectedbuttondescrip"
                    android:src="@drawable/icon_rejected"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/viewlist_mainactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="@string/viewlistall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_view_mainactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <com.singh.daman.proprogressviews.DoubleArcProgress
            android:layout_width="140dip"
            android:layout_height="140dip"
            app:arcRadius="30dp"
            app:colorofArc="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/loading_text_mainactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stockloadingtext"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</RelativeLayout>
