<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2017 Steven Foskett, Jimmy Ho, Ryan Porterfield                 ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a   ~
  ~ copy of this software and associated documentation files (the "Software"),~
  ~ to deal in the Software without restriction, including without limitation ~
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense,  ~
  ~ and/or sell copies of the Software, and to permit persons to whom the     ~
  ~ Software is furnished to do so, subject to the following conditions:      ~
  ~                                                                           ~
  ~ The above copyright notice and this permission notice shall be included in~
  ~ all copies or substantial portions of the Software.                       ~
  ~                                                                           ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR~
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,  ~
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER    ~
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING   ~
  ~ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER       ~
  ~ DEALINGS IN THE SOFTWARE.                                                 ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.einzig.ipst2.activities.PSEditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dip"
        android:orientation="vertical"
        android:id="@+id/namebg_pseditactivity"
        android:background="@drawable/cell_shape"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/namelabel_pseditactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/namena_psdetailsactivity"
            android:textAppearance="?android:textAppearanceLarge" />

        <EditText
            android:id="@+id/name_pseditactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:layout_marginBottom="10dip"
            android:hint="@string/name"
            android:text="@string/notavailable"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:orientation="vertical"
        android:id="@+id/datesubbg_pseditactivity"
        android:background="@drawable/cell_shape"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/datesublabel_pseditactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/datesub_psdetailsactivity"
            android:textAppearance="?android:textAppearanceLarge" />
        <Button
            android:id="@+id/datesubbutton_pseditactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:layout_marginBottom="10dip"
            android:hint="@string/name"
            android:text="@string/notavailable"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:orientation="vertical"
        android:id="@+id/portalrespondedlayout_pseditactivity"
        android:background="@drawable/cell_shape"
        android:layout_height="wrap_content">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/saveportalbuttonbg_pseditactivity"
        android:layout_margin="10dip"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveportalbutton_pseditactivity"
            android:text="@string/save_portal"
            />
    </LinearLayout>
</LinearLayout>
